Fixes for colorpicker on firefox

--- a/src/custom-elements/cps-colorpicker/colorpicker.styles.css
+++ b/src/custom-elements/cps-colorpicker/colorpicker.styles.css
@@ -8,7 +8,6 @@
 .bar {
 	width: 100%;
 	border-radius: 5px;
-	height: 48px; 
 	cursor: "pointer";
 }
 
